--- a/website/static/styles/chatbot.css
+++ b/website/static/styles/chatbot.css
@@ -73,6 +73,7 @@
     flex-direction: column-reverse;
 }
 
+
 .messages__item {
     background: orange;
     max-width: 60.6%;
@@ -80,7 +81,7 @@
 }
 
 .messages__item--operator {
-    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -93,7 +94,7 @@ padding-left: 30px;  /* width of the image plus a little extra padding */
 /*}*/
 
 .messages__item--visitor {
-    margin-right: auto;
+    margin-left: auto;
 }
 
 /* FOOTER */
@@ -155,16 +156,18 @@ padding-left: 30px;  /* width of the image plus a little extra padding */
 .messages__item--typing {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
    
 }
 
 .messages__item--operator {
-    border-top-left-radius: 20px;
+    
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     background: var(--primary);
     color: white;
+    animation: fade-in-left 0.4s ease-in-out both;
 }
 
 /* FOOTER */
@@ -205,4 +208,18 @@ padding-left: 30px;  /* width of the image plus a little extra padding */
     border-bottom-left-radius: 50px;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+}
+
+
+@keyframes fade-in-left{
+ 
+    0% {
+        transform: translate(-50%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translate(0%);
+        opacity: 1;
+    }
 }
