--- a/website/templates/chatbot.html
+++ b/website/templates/chatbot.html
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <div class="chatbox__messages" >
+        <div class="chatbox__messages" id="chatbox_msgs" >
             
             <div></div>
         </div>
