--- a/website/templates/editAoK.html
+++ b/website/templates/editAoK.html
@@ -6,7 +6,9 @@
 <h1>Add Acts of Kindness</h1>
 
 <form method='POST'>
-<textarea name="aok" id='aok' class='form-control'></textarea>
+<textarea name="aok" id='aok' class='form-control' placeholder="Enter act description"></textarea>
+<input type="url"   id="mediaURL" name="mediaURL" placeholder="Media URL" class='form-control' style="margin-top:20px;"/>
+<!--<button type="file" class="btn btn-primary">Add AoK</button>-->
 <br/>
 <div align='center'>
 <button type="submit" class="btn btn-primary">Add AoK</button>
