--- a/website/static/styles/chatbot.css
+++ b/website/static/styles/chatbot.css
@@ -217,6 +217,108 @@ padding-left: 30px;  /* width of the image plus a little extra padding */
 }
 
 
+#invisibleColumn {
+    height:20px;
+    width: 1px;
+    
+  }
+
+.dot {
+    height: 10.5px;
+    width: 10.5px;
+   /* .centered();*/
+    /* left: -65px; */
+    
+    background-color: white;
+    border-radius: 50%;
+    animation: pulse-outer 7.5s infinite ease-in-out;
+  }
+  
+
+  .dot:nth-child(2) {
+    /* left: 0; */
+    margin-left: 10px;
+    margin-right: 10px;
+    animation: pulse-inner 7.5s infinite ease-in-out;
+    animation-delay: 0.2s;
+  }
+
+  .dot:nth-child(3) {
+    /* left: 65px; */
+    animation: pulse-outer 7.5s infinite ease-in-out;
+    animation-delay: 0.4s;
+  }
+  
+  @keyframes pulse-inner {
+    0% { transform: scale(1); }
+    7.5% { transform: scale(1.5); }
+    15% { transform: scale(1); }
+    22.5% { transform: scale(1.5); }
+    30% { transform: scale(1); }
+    37.5% { transform: scale(1.5); }
+    45% {
+      top: 0;
+      transform: scale(1); 
+      height: 10.5px; 
+      border-bottom-left-radius: 50%;
+      border-bottom-right-radius: 50%;
+      transform: rotate(-370deg);
+    }
+    50% {
+      top: 22.5px;
+      height: 5px;
+      border-top-left-radius: 50%;
+      border-top-right-radius: 50%;
+      border-bottom-left-radius: 3rem;
+      border-bottom-right-radius: 3rem;
+      transform: rotate(10deg);
+    }
+    55% { transform: rotate(-10deg); }
+    60% { transform: rotate(10deg); }
+    65% { transform: rotate(-10deg); }
+    65% { transform: rotate(0deg); }
+    85% {
+      top: 22.5px;
+      height: 5px;
+      border-top-left-radius: 50%;
+      border-top-right-radius: 50%;
+      border-bottom-left-radius: 3rem;
+      border-bottom-right-radius: 3rem;
+      transform: rotate(0deg); 
+    }
+    92.5% {
+      top: 22.5px;
+      height: 5px;
+      border-top-left-radius: 50%;
+      border-top-right-radius: 50%;
+      border-bottom-left-radius: 2.5rem;
+      border-bottom-right-radius: 2.5rem;
+      transform: rotate(0deg); 
+    }
+    100% {
+      top: 0;
+      height: 10.5px;
+      border-radius: 50%;
+      transform: rotate(-360deg);
+    }
+  }
+  
+  @keyframes pulse-outer {
+    0% { transform: scale(1); }
+    7.5% { transform: scale(1.5); }
+    15% { transform: scale(1); }
+    22.5% { transform: scale(1.5); }
+    30% { transform: scale(1); }
+    37.5% { transform: scale(1.5); }
+    45% { transform: scale(1); height: 10.5px; }
+    55% { tranform: scale(1); height: 5px; }
+    60% { height: 10.5px; }
+    75% { height: 10.5px; }
+    80% { tranform: scale(1); height: 5px; }
+    85% { height: 10.5px; }
+    100% { height: 10.5px; }
+  }
+
 @keyframes fade-in-left{
  
     0% {
@@ -229,3 +331,14 @@ padding-left: 30px;  /* width of the image plus a little extra padding */
         opacity: 1;
     }
 }
+
+/*
+.centered() {
+    margin: auto;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    top: 0;
+    right: 0;
+  }*/
+
