--- a/website/templates/editAoK.html
+++ b/website/templates/editAoK.html
@@ -19,7 +19,23 @@
 <br/>
 <ul class="list-group list-group-flush" id="aoks">
     {% for aok in user.acts %} 
-    <li class="list-group-item">{{aok.act}}
+    <li class="list-group-item"> 
+        <div style=" display: flex; flex-direction: row">
+            <div style="margin-right:10px;">
+                {{aok.act}}
+            </div>
+
+            {% for media in aok.getMediaLinks() %}
+            <div style="margin-right:3px;" >
+                <iframe frameborder="0"  onload="resizeIframe(this)"
+                src="{{media.url}}" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
+                </iframe>  
+            <!--    <iframe width="1280" height="720" src="https://www.youtube.com/embed/nwAYpLVyeFU" title="Life Vest Inside - Kindness Boomerang - "One Day"" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+            <object data="{{media.url}}" width="200"></object>-->
+            </div>
+            {% endfor %}
+
+        </div>
         <button type="button" class="close" onClick="delete_AoK({{aok.id}})">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -28,3 +44,15 @@
 
 
 {% endblock%}
+
+
+{% block scripts  %}
+
+<script>
+function resizeIframe(obj) {
+    obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
+  }
+
+</script>
+
+{% endblock  %}
