--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -74,6 +74,7 @@
           <a class="nav-item nav-link" id="edit" href="/edit">Edit</a>
           <a class="nav-item nav-link" id="aok-scrapper" href="/aok-scrapper">Scrap</a>
           <a class="nav-item nav-link" id="aok-model" href="/aok-model">Models</a>
+          <a class="nav-item nav-link" id="media" href="/media">Media</a>
           <a class="nav-item nav-link" id="chatbot" href="/chatbot">Chatbot</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
