--- a/website/templates/media.html
+++ b/website/templates/media.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block header %}
+<link href="https://cdn.jsdelivr.net/npm/nanogallery2@3/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/nanogallery2@3/dist/jquery.nanogallery2.min.js"></script>
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/media.css')}}">
 {% endblock  %}
 
@@ -13,10 +15,10 @@
 <h1 align="center">Kindness Media</h1>
 
 
-    {% for med in media %} 
+{% for med in media %} 
     <div class="column"> 
     
-        <iframe frameborder="0"  style="margin-right:5px"  src="{{med.url}}"></iframe>
+        <iframe frameborder="0"  width="100%" height="100%" style="margin-right:5px"  src="{{med.url}}"></iframe>
  
     </div>
 
