--- a/website/static/styles/media.css
+++ b/website/static/styles/media.css
@@ -1,104 +1,14 @@
-/* The grid: Four equal columns that floats next to each other */
-* {
-    box-sizing: border-box;
-  }
-
-  body {
-    margin: 0;
-    width: 100%;
-  }
-
-  
-.column {
-    float: left;
-    width: 350px;
-    height: 200px;
-    padding: 30px;
-   position: relative;
-   
-    
-  }
-
-  /* Style the images inside the grid */
-.column div {
-    opacity: 1;
-    cursor: pointer;
-    
-
-  }
-  
-  .column:hover {
-    opacity: 1;
-    transform: scale(1.15);
-    transition:  all 0.2s ease-in;
-  }
-
-  .column:hover .closebtn{
-    opacity: 1;
-    transform: scale(1.15);
-    transition:  all 0.2s ease-in;
-  }
-
-  /* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
 
 
-  
-  /* Expanding image text */
-.imgtext {
-    position: absolute;
-    bottom: 15px;
-    left: 15px;
-    color: white;
-    font-size: 20px;
-  }
-  
-
-  @keyframes appear {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: .8;
-    }
-  }
-
-  .box {
-
-    width: 100%;
-    height: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-
-  }
-
-  /* Closable button inside the image */
-.closebtn {
-  position: absolute;
-  top: 20px;
-  left: 35px;
-  margin-bottom: 5px;
-  color: rgb(255, 255, 255);
-  background-color: rgb(238, 32, 101);
-  font-size: 25px;
-  cursor: pointer;
-  opacity: 0;
+body {
+  font-family: 'Roboto', sans-serif;
 }
 
-.closebtn:hover{
-  background-color: rgb(134, 12, 52);;
-}
+
 
 .category_parent {
   position: absolute;
   
-  
-
   float: left;
   bottom: 25px;
   left:25px;
@@ -108,39 +18,117 @@
 }
 
 .category_parent .category_tag{
-  padding: 5px;
+  padding: 3px;
   font-size: small;
   margin-right: 5px;
   background-color: blueviolet;
-  border-radius: 10px;
+  border-radius: 7px;
   color: white;
   opacity:0;
 
 }
 
-.column:hover .category_tag{
-    opacity: 1;
-
-    transition:  all 0.2s ease-in;
-
-  }
-
-
-.album_container {
-  margin: 0;
-  width: 100%;
-  position: relative;
+#card-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.load_more_btn {
-  width: 200px;
-  height: 70px;
-  font-size: large;
-  background-color: rgb(75, 184, 71);
-  text-align: center;
-  color: white;
-  position:sticky;
+.card {
+  height: 30vh;
+  width: calc((100% / 3) - 16px);
+  margin: 8px;
+  border-radius: 3px;
+  transition: all 200ms ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+
+.card:hover {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.card:hover .category_tag{
+  opacity: 1;
+
+  transition:  all 0.2s ease-in;
+
+}
+
+
+  /* Closable button inside the image */
+  .closebtn {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    border-radius: 20px ;
+    background-color: rgba(255, 255, 255, 0.507);
+    color: grey;
+    font-size: 30px;
+    cursor: pointer;
+    opacity: 0;
+  
+    text-align: initial;
+   
+  }
+  
+  .closebtn:hover{
+    color:black;
+    background-color:  rgba(255, 255, 255, 0.807);
+  }
+  
+.card:hover .closebtn{
+  opacity: 1;
+  transform: scale(1.15);
+  transition:  all 0.2s ease-in;
+}
+
+
+
+.card .responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
   bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
   
 }
 
+.card-actions {
+  margin: 8px;
+  padding: 16px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#load-more {
+  width: calc((100% / 3) - 8px);
+  padding: 16px;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  transition: all 200ms ease-in-out;
+  border-radius: 3px;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  letter-spacing: 0.15rem;
+}
+
+#load-more:not([disabled]):hover {
+  box-shadow: 0 1px 9px rgba(0, 0, 0, 0.2);
+}
+
+#load-more[disabled] {
+  background-color: #eaeaea !important;
+}
